# startup-kindergarten_storybook_mvp

./: .dockerignore  .env.example  .env.trial.example  .gitignore  Dockerfile.frontend  Dockerfile.server  QUICKSTART.md  README.md  app.js  dashboard.html  design-system.md  docker-compose.yml  index.html  styles.css
deploy/: Caddyfile.example  README.md
docs/: 00-项目目标.md  01-账号空间与权限规格.md  02-前端信息架构与页面流程.md  03-后端接口契约.md  04-数据库与状态机设计.md  05-异步任务与生成队列设计.md  06-完成度审计.md  07-后续实施清单.md  08-演示版冻结说明.md  09-真实生成能力接入说明.md  10-后端领域架构重构方案.md  README.md  产品功能总纲.md  定制绘本生成流程.md  普通绘本生成流程.md
frontend/: api.js  app.js  dashboard.css  dashboard.html  dashboard.js  index.html  package-lock.json  package.json  styles.css  tsconfig.tsbuildinfo
scripts/: audit-frontend-mock-usage.mjs  backup-postgres.sh  check-backup-restore.sh  check-fast.sh  check-migrations.sh  check-real-provider-readiness.sh  check-smart.sh  (+22 more)
server/: Cargo.toml
server/config/: development.yaml  production.yaml  scheduler.yaml  test.yaml
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20250603_000001_create_storybook_schema.rs  m20260717_000001_initial_schema.rs  m20260718_000002_create_parent_intakes.rs  m20260718_000003_scope_parent_intakes.rs  m20260718_000004_add_core_query_indexes.rs  m20260718_000005_add_generation_job_retry_metadata.rs  m20260718_000006_add_generation_job_worker_locks.rs  m20260718_000007_add_marketplace_template_source_storybook.rs  m20260718_000008_unique_marketplace_submission_source.rs  m20260718_000009_create_parent_intake_links.rs  m20260719_000010_add_parent_intake_link_access_stats.rs  m20260719_000011_add_delivery_query_indexes.rs  m20260719_000012_parent_intake_classroom_scope.rs  m20260720_000013_create_generation_cost_logs.rs  m20260721_000014_add_export_job_last_error.rs  m20260721_000015_add_share_link_access_stats.rs  m20260722_000016_add_storybook_role_reference_images.rs
server/src/: app.rs  error.rs  lib.rs  main.rs  models.rs  state.rs
server/src/api/: auth.rs  children.rs  content.rs  dashboard.rs  delivery.rs  images.rs  mod.rs  openapi.rs  organization.rs  router.rs  storybooks.rs  visuals.rs
server/src/application/: auth.rs  children.rs  delivery.rs  generation.rs  marketplace.rs  mod.rs  operator.rs  organization.rs  parent_intakes.rs  storybooks.rs  submissions.rs  workspaces.rs
server/src/commons/: error.rs  mod.rs  state.rs  support.rs
server/src/controllers/: auth.rs  children.rs  delivery.rs  generation.rs  health.rs  marketplace.rs  mod.rs  operator.rs  organization.rs  parent_intakes.rs  routes.rs  storybooks.rs  submissions.rs  workspaces.rs
server/src/data/: mod.rs
server/src/domains/common/: mod.rs
server/src/initializers/: mod.rs
server/src/mailers/: mod.rs
server/src/models/: app_state.rs  auth.rs  children.rs  content.rs  delivery.rs  images.rs  mod.rs  organization.rs  storybooks.rs  visuals.rs
server/src/models/_entities/: case_storybooks.rs  character_profiles.rs  child_photos.rs  children.rs  classrooms.rs  generation_cost_logs.rs  image_assets.rs  image_generation_outputs.rs  image_generation_tasks.rs  image_review_events.rs  mod.rs  parent_character_profiles.rs  parents.rs  prop_profiles.rs  reference_images.rs  schools.rs  story_templates.rs  storybook_exports.rs  storybook_page_visual_subjects.rs  storybook_pages.rs  storybook_roles.rs  storybook_share_links.rs  storybooks.rs  teachers.rs
server/src/repositories/: audit.rs  auth.rs  children.rs  delivery.rs  generation.rs  intakes.rs  market.rs  mod.rs  organization.rs  storybooks.rs
server/src/services/: generation_provider.rs  mod.rs  pdf.rs  storage.rs
server/src/tasks/: generation.rs  mod.rs
server/src/views/: auth.rs  children.rs  content.rs  dashboard.rs  delivery.rs  images.rs  mod.rs  organization.rs  storybooks.rs  visuals.rs
server/src/workers/: export.rs  generation.rs  mod.rs
(+86 files in other folders)
