[package]
name = "kindergarten-storybook-server"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
axum = "0.8"
loco-rs = { version = "0.16", default-features = false, features = ["cli", "with-db"] }
sea-orm = { version = "1", default-features = false, features = [
  "macros",
  "with-uuid",
  "with-json",
  "with-chrono",
  "with-rust_decimal",
  "sqlx-postgres",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rust_decimal = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }

[dependencies.migration]
path = "migration"
