[package]
name = "kindleaf-server"
version = "0.1.0"
edition = "2024"
default-run = "kindleaf-server"

[workspace]
members = [".", "migration"]

[features]
default = ["db"]
db = ["loco-rs/with-db"]

[dependencies]
argon2 = "0.5"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
loco-rs = { version = "0.16", default-features = false, features = ["cli"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rand_core = { version = "0.6", features = ["getrandom"] }
sea-orm = { version = "1", default-features = false, features = ["macros", "with-uuid", "with-json", "with-chrono", "sqlx-postgres"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1", features = ["serde", "v4"] }
base64 = "0.22"
hmac = "0.12"
png = "0.17"
sha2 = "0.10"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[dependencies.migration]
path = "migration"

[[bin]]
name = "kindleaf-server"
path = "src/bin/main.rs"
