[package]
name = "migration"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration-cli"
path = "src/main.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm-migration = { version = "1", default-features = false, features = [
  "cli",
  "runtime-tokio-rustls",
  "sqlx-postgres",
] }
