[package]
name = "migration"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration-cli"
path = "src/main.rs"

[dependencies]
async-std = { version = "1", features = ["attributes"] }
sea-orm-migration = { version = "1", features = ["runtime-async-std-rustls", "sqlx-postgres"] }

